--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,15 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: flex-start; 
-  padding-top: 20px; 
 }
 
-h1 {
-  margin-bottom: 20px; 
+.banner {
+  font-family: 'Nunito', sans-serif; 
+  font-size: 20px;
+  background-color: rgb(129, 171, 81);
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner h1 {
+  margin: 20px;
+}
+
+.banner img {
+  width: 60px;
+  height: auto;
+}
+
+.filters {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.filters h2,
+.sort h2 {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .content {
+  font-family: 'Nunito', sans-serif;
   display: flex;
 }
 
@@ -20,42 +50,99 @@ h1 {
 }
 
 .ClothingItem {
-  width: 33%;
-  min-width: 200px;
-  height: auto;
+  font-family: 'Nunito', sans-serif;
+  width: 25%;
+  min-width: 150px;
+  height: 320px;
   margin: 10px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: pink;
+  background-color: rgb(207, 244, 161);
   display: flex;
   flex-direction: column; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .ClothingItem img {
-  width: 100%;
+  width: 80%;
   height: auto;
+  margin: 5px;
 }
 
 .ClothingItem button {
-  width: 40%;
-  height: 40%;
+  width: 50%;
+  height: auto;
   border-radius: 4px;
   border: 0px;
-  background-color: rgba(147, 250, 250, 0.65);
-  margin-left: auto; 
+  background-color: white;
+  margin-right: 5px;
+  margin-left: 0px;
 }
 
+.picture {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ClothingItem h1 {
+  margin-top: 30px;
+  font-size: 20px; 
+  margin-bottom: 0px; 
+}
+
+.ClothingItem p {
+  margin-top: 0px; 
+}
 .price-cart {
   display: flex;
   align-items: center; 
   justify-content: space-between; 
-  margin-top: auto; 
+  margin-top: 0px; 
 }
 
 .Cart {
-  flex: 1; 
-  padding-left: 20px; 
+  width: 30%;
+  height: auto;
+  padding-left: 0px;
+  padding-bottom: 20px;
+  margin: 0; /* Add this line to reset margin */
+  border: 1px solid #ccc;
+}
+
+.Cart h2 {
+  padding: 10px;
+}
+
+.cart-footer {
+  font-family: 'Nunito', sans-serif;
+  background-color: #ccc;
+  width: auto;
+  padding: 10px;
+  margin: 0; /* Add this line to reset margin */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.Cart button {
+  color: black;
+  border: 0.5px solid black;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); /* Add shadow effect */
+  background-color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.Cart button:hover {
+  background-color: #d32f2f;
+  color: white;
+  border: none;
 }
 
 .App-link {
@@ -72,19 +159,21 @@ h1 {
 }
 
 .selected {
-  background-color: blue;
+  background-color: rgba(239, 155, 18, 0.84);
   color: white;
 }
 
 .reset {
   display: flex;
-  justify-content: center; /* Center the reset button horizontally */
+  justify-content: center; 
   margin-top: 20px;
 }
 
 .reset button {
-  color: white;
-  border: none;
+  color: black;
+  border: 0.5px solid black;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); /* Add shadow effect */
+  background-color: transparent;
   padding: 10px 20px;
   cursor: pointer;
   border-radius: 4px;
@@ -93,13 +182,8 @@ h1 {
 
 .reset button:hover {
   background-color: #d32f2f;
+  color: white;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
